@@ -73,6 +73,7 @@ plan tests => 1
             + 1
             + 2
             + 1 + 9 + 1
+            + 4
             + 0;
 
 # Zero
@@ -107,3 +108,10 @@ is(lambertw(-0.3678794411,60), "-.9999802922445170178816356178059703446246058302
 is(lambertw(-0.36787944117,60), "-.999997199775271588621133996800710268311896978469564842091958", "LambertW(-1/e 11 dig)");
 
 is(lambertw("-0.3678794411714423215955237701614608674458111310317678345078368016974614957",100), "-.9999999999999999999999999999999999995059345801068083846704911383511891531411739090792786439206362436", "LambertW(-1/e 73 dig)");
+
+######
+
+is(lambertw("-0.367879441171443",60), "-1.00000000000000000000000000000000000000000000000000000000000", "LambertW(-1/e - 1e-15 dig) returns -1 without breaking");
+is(lambertw("0.00000000000000000001",40), ".0000000000000000000099999999999999999999", "LambertW(1e-20,40)");
+is(lambertw("0.00000000000000000001",420), ".000000000000000000009999999999999999999900000000000000000001499999999999999999973333333333333333333854166666666666666655866666666666666666900097222222222222217020952380952380952499577604166666666663910934744268077601475913461502425044090159597857944524611228692354974116996685530680861459528126217117169972234727628521830948376224989995284624307889124814445801797404570553660968546276488076412391640470262269859307100029", "LambertW(1e-20,420)");
+is(lambertw("-0.00000000000000000001",420), "-.000000000000000000010000000000000000000100000000000000000001500000000000000000026666666666666666667187500000000000000010800000000000000000233430555555555555560756825396825396825515450620039682539685295414462081128747860393179315476190477741636709956709956747371206986302342206030432921876477432055311897055850700134485297138116940868277300472461303415795557192464848950959136923353074743365175425437840081247801716351284", "LambertW(-1e-20,420)");
